--- a/TodoProject.Api/TodoProject.Api.csproj
+++ b/TodoProject.Api/TodoProject.Api.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -10,8 +10,10 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.7" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.7" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="8.1.1" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TodoProject.Dal\TodoProject.Dal.csproj" />
+    <ProjectReference Include="..\TodoProject.Infrastructure\TodoProject.Infrastructure.csproj" />
+    <ProjectReference Include="..\TodoProject.Application\TodoProject.Application.csproj" />
   </ItemGroup>
 </Project>
